2009-08-31  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/parsmarts.cpp: First attempt to make smarts work again. Should be
        working for tetrahedral stereochemistry. Cis/Trans may still need some
        more code.


2009-08-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/fingerprint.cpp, include/openbabel/fingerprint.h,
	src/formats/fastsearchformat.cpp: Patches from Izhar Wallach for a
	similarity search within a range (e.g. Tanimoto from 0.6-0.8).

2009-08-21  Craig James <cjames@emolecules.com>

	* src/kekulize.cpp, include/openbabel/mol.h: Rewrote
	expand_kekule() in kekulize.cpp, making it much simpler to
	understand.  Original algorithm had bugs and was very hard to
	follow.

	* src/formats/mdlformat.cpp: Replaced atoi(), which would
	incorrectly accept some invalid numbers, with a custom function
	that catches most invalid numbers.  Fixed several bugs that caused
	core dumps for unusual or incorrectly-formatted SD files.
	Improved a couple of error messages.  Commented out one section
	that was supposed to read R-group definitions; the code was
	plainly wrong and caused core dumps, but the MDL spec is complex
	and it will take some work to get this right (it's a deprecated
	part of the CTAB spec anyway).
	
	* src/formats/smilesformat.cpp: Fixed two bugs: the pseudo atom '*'
	was always printed with brackets '[*]', and boron atoms were
	sometimes printed with brackets '[B] when they shouldn't be.
	
	* src/obiter.cpp: Added a number of tests for NULL pointers.  New
	stereo code was causing core dumps when atoms had zero bonds.

	* src/mol.cpp: Added a test to catch a NULL pointer that was
	causing a core dump for molecules with one atom.

	* src/stereo/percepton.cpp: Removed a warning that was issued for
	almost every SMILES.

	* Added "svn:ignore" properties for the cmake(1) files
	so they're ignored by Subversion.

2009-08-03  Jean Brefort  <jean.brefort@normalesup.org>
